Comienzo de maquetado

--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TP</title>
+    <title>AhorrADAs</title>
 </head>
 <body>
-    <div class="test">HOLA</div>
+
+    <header>
+        <nav>
+            <div>
+                <button>
+                    <i></i>AhorrADAs
+                </button>
+            </div>
+            <div>
+                <div>
+                    <div class="buttons">
+                        <a class="button">
+                            <i></i>
+                            Balance
+                        </a>
+                        <a class="button" id="viewCategories">
+                            <i></i>
+                            Categorías
+                        </a>
+                        <a class="button" id="viewReportes">
+                        <i></i>
+                        Reportes
+                    </a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    
 </body>
 </html>
