Maquetado section, fin del Balance

--- a/index.html
+++ b/index.html
@@ -19,21 +19,52 @@
                 <div>
                     <div class="buttons">
                         <a class="button">
-                            <i></i>
-                            Balance
+                            <i></i> Balance
                         </a>
                         <a class="button" id="viewCategories">
-                            <i></i>
-                            Categorías
+                            <i></i> Categories
                         </a>
-                        <a class="button" id="viewReportes">
-                        <i></i>
-                        Reportes
-                    </a>
+                        <a class="button" id="viewReports">
+                            <i></i> Reports
+                        </a>
+                    </div>
                 </div>
-            </div>
+            </div>    
         </nav>
     </header>
-    
+    <section id="balanceHome">
+        <div class="container">
+            <div class="columns">
+                <div
+                    class="columnn">
+                    <!-- Balance -->
+                    <div class="box">
+                        <h2>
+                            Balance
+                        </h2>
+                        <div class="column">
+                        <div class="columns">
+                            <div class="column">Gainings</div>
+                            <div id="gainings"
+                            class="column">+$
+                    </div>
+                </div>
+                <div class="columns">
+                  <div class="column">Expenses</div>
+                  <div
+                    id="expenses"
+                    class="column">-$
+                  </div>
+                </div>
+                <div class="columns">
+                  <div class="column">Total</div>
+                  <div
+                    id="total"
+                    class="column">$
+                  </div>
+                </div>
+              </div>
+            </div>
+
 </body>
 </html>
