--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
   </head>
   <body>
     <header>
-      <h1 class="text-3xl font-bold underline">FUCK</h1>
       <nav>
         <div>
           <button><i></i>AhorrADAs</button>
@@ -384,5 +383,6 @@
       </div>
     </section>
   </body>
-  <script src="main.js"></script>
+ <script src="../JS/main.js"></script>
+ <script src="../JS/operaciones.js"></script>
 </html>
